fixed the mobile menu z-index

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -33,7 +33,7 @@
 		color: #fff;
 		border: none;
 		cursor: pointer;
-		z-index: 100000;
+		z-index: 100;
 	}
 
 	.menu {
@@ -46,6 +46,7 @@
 		height: 100%;
 		width: 100%;
 		background: $bg;
+		z-index: 99;
 
 		.menu_item + .menu_item {
 			margin-top: 2rem;
